2002-02-27  James Willcox  <jwillcox@cs.indiana.edu>

	* gedit-recent.c (gedit_recent_menu_cb): Don't add the URI to the
	list.  Also added debugging messages.

2002-02-27  James Willcox  <jwillcox@cs.indiana.edu>

	* gedit-recent.c (gedit_recent_notify_cb): Check whether there is
	a BonoboUIComponent
	* gedit-mdi.c (gedit_mdi_get_recent_from_window): Do better error
	checking.

2002-02-27  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.c (gedit_document_save_as_real):
	fixed bug #67037

2002-02-26  James Willcox  <jwillcox@cs.indiana.edu>

	* gedit-recent.[ch]:  Completely replaced by new code.  This will
	make its way into a library somewhere soon.
	* gedit-mdi.[ch]:  Made to use the new gedit-recent.
	* gedit-file.c:  Ditto

2002-02-25  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/gedit-preferences-dialog.c
	(gedit_preferences_dialog_auto_save_checkbutton_toggled):
	new function
	(gedit_preferences_dialog_setup_save_page): connect "toggled"
	signal of the auto save checkbutton

2002-02-25  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-commands.[ch] (gedit_cmd_help_contents): new 
	function

	* gedit-menus.[c]: added HelpContents to gedit_verbs 

2002-02-23  Kjartan Maraas  <kmaraas@gnome.org>

	* gedit2.c: Remove unsupported #ifdef ENABLE_NLS stuff.
	
2002-02-23  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-utils.c (gedit_utils_error_reporting_reverting_file):
	report more helpful error messages
 
2002-02-23  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-utils.[ch](gedit_utils_error_reporting_loading_file)
	(gedit_utils_error_reporting_saving_file)
	(gedit_utils_error_reporting_reverting_file): new functions

	* gedit-file.c: use the new functions to report errors

	* gedit-document.c (gedit_document_save_as_real): better
	error reporting

2002-02-22  Federico Mena Quintero  <federico@ximian.com>

	* bonobo-mdi.c: Replace gtk_object_*  with the new
	GObject calls.
	* gedit-mdi.c: Likewise.

2002-02-22  Paolo Maggi  <maggi@athena.polito.it>
