@@ -2,7 +2,6 @@
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd" >
 
 <glade-interface>
-  <requires lib="gnome" />
 
   <widget class="GtkDialog" id="dialog">
     <property name="visible">no</property>
