@@ -1,3 +1,11 @@
+2002-02-28  Paolo Maggi  <maggi@athena.polito.it>
+
+	* dialogs/replace.glade2: removed requires lib="gnome" 
+
+	* gedit-utils.c: fixed bug #72953
+
+	* gedit-undo-manager.c: mem leak fixed
+
 2002-02-27  James Willcox  <jwillcox@cs.indiana.edu>
 
 	* gedit-recent.c (gedit_recent_menu_cb): Don't add the URI to the
